--- a/src/mechachatapp/gui/view/MessageLogView.fxml
+++ b/src/mechachatapp/gui/view/MessageLogView.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="365.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60" fx:controller="mechachatapp.gui.controller.MessageLogViewController">
-    <children>
-        <Button layoutX="270.0" layoutY="458.0" onAction="#handleSendMessage" prefHeight="31.0" prefWidth="81.0" text="Send" />
-      <TextField fx:id="txtMessage" layoutX="14.0" layoutY="458.0" prefHeight="31.0" prefWidth="244.0" />
-      <ListView fx:id="lstMessages" layoutX="14.0" layoutY="14.0" prefHeight="432.0" prefWidth="336.0" />
-    </children>
-</AnchorPane>
+
+<BorderPane stylesheets="@../Styles/MechaChatStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mechachatapp.gui.controller.MessageLogViewController">
+   <bottom>
+      <HBox maxWidth="1.7976931348623157E308" spacing="5.0" BorderPane.alignment="CENTER_RIGHT">
+         <children>
+            <TextField fx:id="txtMessage" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+              <Button onAction="#handleSendMessage" prefHeight="31.0" prefWidth="81.0" text="Send" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
+   <center>
+      <ListView fx:id="lstMessages" prefHeight="432.0" prefWidth="336.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+      </ListView>
+   </center>
+</BorderPane>
