--- a/src/mechachatapp/gui/view/MessageLogView.fxml
+++ b/src/mechachatapp/gui/view/MessageLogView.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="365.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60" fx:controller="mechachatapp.gui.controller.MessageLogViewController">
+<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mechachatapp.gui.controller.MessageLogViewController">
     <children>
         <Button layoutX="270.0" layoutY="458.0" onAction="#handleSendMessage" prefHeight="31.0" prefWidth="81.0" text="Send" />
-      <TextField fx:id="txtMessage" layoutX="14.0" layoutY="458.0" prefHeight="31.0" prefWidth="244.0" />
-      <ListView fx:id="lstMessages" layoutX="14.0" layoutY="14.0" prefHeight="432.0" prefWidth="336.0" />
+      <TextField fx:id="txtMessage" layoutX="14.0" layoutY="458.0" onAction="#handleSendMessage" prefHeight="31.0" prefWidth="244.0" />
+      <ListView fx:id="lstMessages" layoutX="14.0" layoutY="14.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="432.0" prefWidth="336.0" />
     </children>
 </AnchorPane>
