--- a/src/mechachatapp/gui/view/MessageLogView.fxml
+++ b/src/mechachatapp/gui/view/MessageLogView.fxml
@@ -9,6 +9,6 @@
     <children>
         <Button layoutX="270.0" layoutY="458.0" onAction="#handleSendMessage" prefHeight="31.0" prefWidth="81.0" text="Send" />
       <TextField fx:id="txtMessage" layoutX="14.0" layoutY="458.0" onAction="#handleSendMessage" prefHeight="31.0" prefWidth="244.0" />
-      <ListView fx:id="lstMessages" layoutX="14.0" layoutY="14.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="432.0" prefWidth="336.0" />
+      <ListView fx:id="lstMessages" layoutX="14.0" layoutY="14.0" prefHeight="432.0" prefWidth="336.0" />
     </children>
 </AnchorPane>
