--- a/src/mechachatapp/gui/Styles/MechaChatStyle.css
+++ b/src/mechachatapp/gui/Styles/MechaChatStyle.css
@@ -16,5 +16,18 @@ and open the template in the editor.
         linear-gradient(#8a8a8a 0%, #6b6a6b 20%, #343534 80%, #262626 100%),
         linear-gradient(#777777 0%, #606060 50%, #505250 51%, #2a2b2a 100%);
     -fx-background-insets: 0,1,4,5,6;
-    
+
+}
+
+.focusButton {
+    -fx-text-fill:white;
+    -fx-padding: 15 30 15 30;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+
+    -fx-background-color:
+        linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%);
+    -fx-background-insets: 0;
+    -fx-background-radius: 9;
 }
