--- a/src/mechachatapp/gui/view/MessageLogView.fxml
+++ b/src/mechachatapp/gui/view/MessageLogView.fxml
@@ -6,10 +6,15 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -69,18 +74,36 @@
             <JFXHamburger GridPane.columnIndex="1" />
             <MenuButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" opacity="0.0" text="MenuButton" GridPane.columnIndex="1">
               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleSendMessage" text="Send" />
+                <MenuItem mnemonicParsing="false" onAction="#handleSignOut" text="Sign out" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem fx:id="undoButton" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="Z" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
-                <MenuItem fx:id="redoButton" mnemonicParsing="false" onAction="#handleRedo" text="Redo">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="Z" control="UP" meta="DOWN" shift="DOWN" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
+                  <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleSendMessage" text="Send" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                      <MenuItem fx:id="undoButton" mnemonicParsing="false" onAction="#handleUndo" text="Undo">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="Z" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                      <MenuItem fx:id="redoButton" mnemonicParsing="false" onAction="#handleRedo" text="Redo">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="Z" control="UP" meta="DOWN" shift="DOWN" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleReset" text="Reset Log" />
+                    </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="View">
+                    <items>
+                        <RadioMenuItem mnemonicParsing="false" onAction="#handleSoloLog" selected="true" text="Solo User Log">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="LogType" />
+                           </toggleGroup>
+                        </RadioMenuItem>
+                        <RadioMenuItem mnemonicParsing="false" onAction="#handleMultiLog" text="Multi User Log" toggleGroup="$LogType" />
+                    </items>
+                  </Menu>
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="exitButton" mnemonicParsing="false" onAction="#handleExit" text="Exit">
                      <accelerator>
@@ -89,6 +112,16 @@
                   </MenuItem>
               </items>
             </MenuButton>
+            <AnchorPane>
+               <children>
+                  <HBox layoutX="371.0" layoutY="17.0" AnchorPane.rightAnchor="15.0">
+                     <children>
+                        <Label text="Logged in as " />
+                        <Label fx:id="usernameLabel" layoutX="10.0" layoutY="10.0" text="username" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
          </children>
       </GridPane>
    </top>
