--- a/src/mechachatapp/gui/view/CollaboratorView.fxml
+++ b/src/mechachatapp/gui/view/CollaboratorView.fxml
@@ -1,44 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <BorderPane prefHeight="676.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mechachatapp.gui.controller.CollaboratorViewController">
    <center>
       <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <children>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <BorderPane maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                <top>
                   <HBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                      <children>
                         <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="All collaborators" HBox.hgrow="ALWAYS" />
-                        <TextField />
+                        <TextField fx:id="txtSearchAllCollabs" promptText="Search all collaborators" />
                      </children>
+                     <BorderPane.margin>
+                        <Insets bottom="10.0" />
+                     </BorderPane.margin>
                   </HBox>
                </top>
                <bottom>
-                  <Button mnemonicParsing="false" text="Add collaborator" BorderPane.alignment="TOP_RIGHT" />
+                  <Button mnemonicParsing="false" onAction="#handleAddCollaborator" text="Add collaborator" BorderPane.alignment="TOP_RIGHT">
+                     <BorderPane.margin>
+                        <Insets top="10.0" />
+                     </BorderPane.margin></Button>
                </bottom>
+               <center>
+                  <FlowPane fx:id="paneAllCollaborators" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </center>
+               <left>
+                  <Button fx:id="btnAllCollabsLeft" maxHeight="1.7976931348623157E308" mnemonicParsing="false" prefWidth="50.0" text="&lt;" BorderPane.alignment="CENTER" />
+               </left>
+               <right>
+                  <Button fx:id="btnAllCollabsRight" maxHeight="1.7976931348623157E308" mnemonicParsing="false" prefWidth="50.0" text="&gt;" textAlignment="RIGHT" BorderPane.alignment="CENTER" />
+               </right>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </BorderPane>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <Separator maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
+            <BorderPane maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                <top>
                   <HBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                      <children>
                         <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="My collaborators" HBox.hgrow="ALWAYS" />
-                        <TextField />
+                        <TextField fx:id="txtSearchYourCollabs" promptText="Search your collaborators" />
                      </children>
+                     <BorderPane.margin>
+                        <Insets bottom="10.0" />
+                     </BorderPane.margin>
                   </HBox>
                </top>
                <bottom>
-                  <Button mnemonicParsing="false" text="Remove collaborator" BorderPane.alignment="TOP_RIGHT" />
+                  <Button mnemonicParsing="false" onAction="#handleRemoveCollaborator" text="Remove collaborator" BorderPane.alignment="TOP_RIGHT">
+                     <BorderPane.margin>
+                        <Insets top="10.0" />
+                     </BorderPane.margin></Button>
                </bottom>
+               <center>
+                  <FlowPane fx:id="paneMyCollaborators" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets />
+                     </BorderPane.margin>
+                  </FlowPane>
+               </center>
+               <left>
+                  <Button fx:id="btnMyCollabsLeft" maxHeight="1.7976931348623157E308" mnemonicParsing="false" prefWidth="50.0" text="&lt;" BorderPane.alignment="CENTER" />
+               </left>
+               <right>
+                  <Button fx:id="btnMyCollabsRight" maxHeight="1.7976931348623157E308" mnemonicParsing="false" prefWidth="50.0" text="&gt;" textAlignment="RIGHT" BorderPane.alignment="CENTER" />
+               </right>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </BorderPane>
          </children>
       </VBox>
    </center>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </BorderPane>
